[project]
name = "userbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "aiosqlite>=0.21.0",
    "levenshtein>=0.27.1",
    "msgpack>=1.1.1",
    "msgspec>=0.19.0",
    "python-dotenv>=1.1.0",
    "redis[asyncio]>=6.1.0",
    "sqlalchemy>=2.0.41",
    "telethon>=1.40.0",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "."
plugins = ["sqlalchemy.ext.mypy.plugin"]
allow_redefinition = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
extra_checks = true
follow_imports = "skip"
follow_imports_for_stubs = false
ignore_missing_imports = false
namespace_packages = true
no_implicit_optional = true
no_implicit_reexport = true
pretty = true
show_absolute_path = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

disable_error_code = ["no-redef"]

exclude = ["\\.?venv", "\\.idea", "\\.tests?"]


[tool.ruff]
src = ["src_zoo_park"]
line-length = 120
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pypackages__",
    "__pycache__",
    "*.pyi",
    "venv",
    ".venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"